# BeanTensor

./: -  .clangd  .gitignore  CMakeLists.txt  README.md  SECURITY.md  compile_flags.txt  main.cpp  perfstat.sh
.claude/: settings.local.json
Core/: Casting.h
Errors/: Logic.h  logic.h
Helper/: ErrorCheck.h  Hardware.h  errorcheck.h  hardware.h  hipcheck.h
Helper/Broadcast/: Broadcast.h
Helper/Casting/: Casting.h  casting_detail.h
Helper/Threads/: CPUThreading.h  cpu_threading.h
Intrinsics/: ConversionMethods.h  Dispatcher.h
Intrinsics/AVX2/: DTypeConversions.cpp
Intrinsics/AVX512/: DTypeConversions.cpp  DTypeConversions.h
Intrinsics/Native/: DTypeConversions.cpp  DTypeConversions.h
Intrinsics/Shared/: SharedIntrinsics.h
NPU/: NPUBackend.cpp  NPUBackend.hpp  exec.c  fma.cc  fma_graph.py
Ops/Algebra/: Eigen.h  Inverse.h  Transpose.h
Ops/Algebra/Dot/: Dot.h
Ops/Algebra/MatMul/: MatMul.h
Ops/Algebra/SVD/: SVD.h
Ops/Convolution/: Conv2D.h  Im2Col.h  Winograd.h
Ops/Convolution/Conv1D/: Conv1D.h
Ops/Elementwise/: Add.h  Log.h  Relu.h
Ops/Elementwise/Add/: Add.h  cpu_Add.cpp  cpu_Add.h  npu_Add.h
Ops/Elementwise/Div/: Div.h
Ops/Elementwise/Exp/: Exp.h
Ops/Elementwise/Mul/: Mul.h
Ops/Indexing/: Argmax.h  Gather.h  Mask.h  Scatter.h
Ops/Indexing/Slice/: Slice.h
Ops/Reduction/: Norm.h  Sum.h
Ops/Reduction/Max/: Max.h
Ops/Reduction/Mean/: Mean.h
Ops/Reduction/Softmax/: Softmax.h
Ops/Transform/Concat/: Concat.h
Ops/Transform/Permute/: Permute.h
Ops/Transform/Reshape/: Reshape.h
Ops/Transform/Squeeze/: Squeeze.h
Ops/Transform/View/: View.h
Tensor/: Dtypes.h  Tensor.cpp  Tensor.h  TensorOps.cpp  TensorOps.cu  TensorOps.h  TensorOps.hpp  tensor.h  tensor_convert.h
tests/: tensor_tests.cpp
